// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewSelector 1`] = `
<DocumentFragment>
  <a
    class="btn btn-default btn-xs"
    href="#"
  >
    <span>
      <i
        class="fa fa-fw fa-files-o"
      />
       
      <b>
        View:
      </b>
       auto 
      <span
        class="caret"
      />
    </span>
  </a>
</DocumentFragment>
`;

exports[`ViewSelector 2`] = `
<DocumentFragment>
  <a
    class="btn btn-default btn-xs open"
    href="#"
  >
    <span>
      <i
        class="fa fa-fw fa-files-o"
      />
       
      <b>
        View:
      </b>
       auto 
      <span
        class="caret"
      />
    </span>
  </a>
  <ul
    class="dropdown-menu show"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <li>
      <a
        href="#"
      >
        auto
      </a>
    </li>
    <li>
      <a
        href="#"
      >
        raw
      </a>
    </li>
    <li>
      <a
        href="#"
      >
        hex
      </a>
    </li>
    <li>
      <a
        href="#"
      >
        graphql
      </a>
    </li>
    <li>
      <a
        href="#"
      >
        json
      </a>
    </li>
    <li>
      <a
        href="#"
      >
        xml/html
      </a>
    </li>
    <li>
      <a
        href="#"
      >
        wbxml
      </a>
    </li>
    <li>
      <a
        href="#"
      >
        javascript
      </a>
    </li>
    <li>
      <a
        href="#"
      >
        css
      </a>
    </li>
    <li>
      <a
        href="#"
      >
        url-encoded
      </a>
    </li>
    <li>
      <a
        href="#"
      >
        multipart form
      </a>
    </li>
    <li>
      <a
        href="#"
      >
        image
      </a>
    </li>
    <li>
      <a
        href="#"
      >
        protocol buffer
      </a>
    </li>
    <li>
      <a
        href="#"
      >
        msgpack
      </a>
    </li>
    <li>
      <a
        href="#"
      >
        grpc/protocol buffer
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
